# baremetal-stm32

./: .gitignore  README.md  import-files.md
bonus/rust-blink/: Cargo.toml  README.md  openocd.cfg
bonus/rust-blink/.cargo/: config.toml
bonus/rust-blink/examples/: device.rs
bonus/rust-blink/src/: main.rs
bonus/rust-blink/svd_lib/stm32l0x1/: Cargo.toml
bonus/rust-blink/svd_lib/stm32l0x1/src/: firewall.rs  flash.rs  lib.rs  rtc.rs  syscfg_comp.rs  tim2.rs  tim21.rs  tim22.rs
bonus/rust-blink/svd_lib/stm32l0x1/src/adc/: calfact.rs  ccr.rs  cfgr1.rs  cfgr2.rs  chselr.rs  cr.rs  dr.rs  ier.rs  isr.rs  smpr.rs  tr.rs
bonus/rust-blink/svd_lib/stm32l0x1/src/aes/: cr.rs  dinr.rs  doutr.rs  ivr0.rs  ivr1.rs  ivr2.rs  ivr3.rs  keyr0.rs  keyr1.rs  keyr2.rs  keyr3.rs  sr.rs
bonus/rust-blink/svd_lib/stm32l0x1/src/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs
bonus/rust-blink/svd_lib/stm32l0x1/src/dbg/: apb1_fz.rs  apb2_fz.rs  cr.rs  idcode.rs
bonus/rust-blink/svd_lib/stm32l0x1/src/dma1/: ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  ccr6.rs  ccr7.rs  cmar1.rs  cmar2.rs  cmar3.rs  cmar4.rs  cmar5.rs  cmar6.rs  cmar7.rs  cndtr1.rs  cndtr2.rs  cndtr3.rs  cndtr4.rs  cndtr5.rs  cndtr6.rs  cndtr7.rs  cpar1.rs  cpar2.rs  cpar3.rs  cpar4.rs  cpar5.rs  cpar6.rs  cpar7.rs  cselr.rs  ifcr.rs  isr.rs
bonus/rust-blink/svd_lib/stm32l0x1/src/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs  swier.rs
bonus/rust-blink/svd_lib/stm32l0x1/src/firewall/: firewall_cr.rs  firewall_csl.rs  firewall_cssa.rs  firewall_nvdsl.rs  firewall_nvdssa.rs  firewall_vdsl.rs  firewall_vdssa.rs
(+275 files in other folders)
